fix: doc to consume full width when navbar is collapsed

--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -378,7 +378,7 @@
   --toc-height: calc(100vh - var(--toc-top) - 2.5rem);
   --toc-width: calc(162 / var(--rem-base) * 1rem);
   --toc-width--widescreen: calc(216 / var(--rem-base) * 1rem);
-  --doc-max-width: calc(720 / var(--rem-base) * 1rem);
+  --doc-max-width: calc(100%);
   --doc-max-width--desktop: calc(100% - 16.5rem - 18.5rem);
   --toc-border-width: 4px;
   --toc-indention-first-level: 16px;
